# netgen

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  netgen_mesher-py3.egg-info  pyproject.toml  setup.py
libsrc/: CMakeLists.txt  Makefile.in
libsrc/core/: .clang-tidy  CMakeLists.txt  _get_glibcxx_use_cxx11_abi.cpp  _get_gxx_abi.cpp  archive.cpp  archive.hpp  array.hpp  autodiff.hpp  autodiffdiff.hpp  basearchive.cpp  basearchive.hpp  bitarray.cpp  bitarray.hpp  concurrentqueue.h  exception.cpp  exception.hpp  flags.cpp  flags.hpp  generate_mpi_sources.py  hashtable.hpp  localheap.cpp  localheap.hpp  logging.cpp  logging.hpp  memtracer.cpp  memtracer.hpp  mpi_wrapper.hpp  ng_mpi.cpp  ng_mpi.hpp  ng_mpi_generated_declarations.hpp  ng_mpi_generated_dummy_init.hpp  ng_mpi_generated_init.hpp  ng_mpi_native.hpp  ng_mpi_wrapper.cpp  ngcore.hpp  ngcore_api.hpp  ngstream.hpp  paje_trace.cpp  paje_trace.hpp  profiler.cpp  (+27 more)
libsrc/csg/: CMakeLists.txt  Makefile.am  Makefile.in  algprim.cpp  algprim.hpp  brick.cpp  brick.hpp  csg.hpp  csgeom.cpp  csgeom.hpp  csgparser.cpp  csgparser.hpp  csgpkg.cpp  curve2d.hpp  edgeflw.cpp  edgeflw.hpp  explicitcurve2d.hpp  extrusion.cpp  extrusion.hpp  genmesh.cpp  identify.cpp  identify.hpp  meshsurf.cpp  meshsurf.hpp  polyhedra.cpp  polyhedra.hpp  python_csg.cpp  revolution.cpp  revolution.hpp  singularref.cpp  singularref.hpp  solid.cpp  solid.hpp  specpoin.cpp  specpoin.hpp  spline3d.hpp  splinesurface.cpp  splinesurface.hpp  surface.cpp  surface.hpp  (+5 more)
libsrc/general/: CMakeLists.txt  Makefile.am  Makefile.in  archive_base.hpp  array.cpp  array.hpp  autodiff.hpp  autoptr.hpp  bitarray.cpp  bitarray.hpp  dynamicmem.hpp  flags.cpp  flags.hpp  gzstream.cpp  gzstream.h  hashtabl.cpp  hashtabl.hpp  mpi_interface.cpp  mpi_interface.hpp  myadt.hpp  mysimd.hpp  mystring.cpp  mystring.hpp  netgenout.hpp  ngarray.cpp  ngarray.hpp  ngbitarray.cpp  ngbitarray.hpp  ngexception.cpp  ngexception.hpp  ngpython.hpp  ngsimd.hpp  optmem.cpp  optmem.hpp  parthreads.cpp  parthreads.hpp  profiler.cpp  profiler.hpp  seti.hpp  sort.cpp  (+6 more)
libsrc/geom2d/: CMakeLists.txt  Makefile.in  csg2d.cpp  csg2d.hpp  genmesh2d.cpp  geom2dmesh.cpp  geom2dmesh.hpp  geom2dpkg.cpp  geometry2d.cpp  geometry2d.hpp  python_geom2d.cpp  spline2d.hpp  vsgeom2d.cpp  vsgeom2d.hpp
libsrc/gprim/: CMakeLists.txt  Makefile.in  adtree.cpp  adtree.hpp  geom2d.cpp  geom2d.hpp  geom3d.cpp  geom3d.hpp  geomfuncs.cpp  geomfuncs.hpp  geomobjects.hpp  geomops.hpp  geomtest3d.cpp  geomtest3d.hpp  spline.cpp  spline.hpp  splinegeometry.cpp  splinegeometry.hpp  transform3d.cpp  transform3d.hpp
libsrc/include/: CMakeLists.txt  Makefile.in  incopengl.hpp  inctcl.hpp  mydefs.hpp  mystdlib.h  nginterface.h  nginterface_v2.hpp  nginterface_v2_impl.hpp  ngsimd.hpp
libsrc/interface/: CMakeLists.txt  Makefile.in  nginterface.cpp  nginterface_v2.cpp  read_fnf_mesh.cpp  readtetmesh.cpp  readuser.cpp  rw_cgns.cpp  rw_medit.cpp  rw_medit.hpp  writeOpenFOAM15x.cpp  writeabaqus.cpp  writediffpack.cpp  writedolfin.cpp  writeelmer.cpp  writefeap.cpp  writefluent.cpp  writegmsh.cpp  writegmsh2.cpp  writejcm.cpp  writepermas.cpp  writetecplot.cpp  writetet.cpp  writetochnog.cpp  writeuser.cpp  writeuser.hpp  writevtk.cpp  wuchemnitz.cpp
libsrc/linalg/: CMakeLists.txt  Makefile.in  bfgs.cpp  densemat.cpp  densemat.hpp  linalg.hpp  opti.hpp  polynomial.hpp  vector.hpp
libsrc/meshing/: CMakeLists.txt  Makefile.in  adfront2.cpp  adfront2.hpp  adfront3.cpp  adfront3.hpp  basegeom.cpp  basegeom.hpp  bcfunctions.cpp  bcfunctions.hpp  bisect.cpp  bisect.hpp  boundarylayer.cpp  boundarylayer.hpp  boundarylayer2d.cpp  boundarylayer_interpolate.cpp  boundarylayer_limiter.hpp  callbackgeom.cpp  callbackgeom.hpp  classifyhpel.hpp  clusters.cpp  clusters.hpp  curvedelems.cpp  curvedelems.hpp  debugging.cpp  debugging.hpp  delaunay.cpp  delaunay2d.cpp  delaunay2d.hpp  fieldlines.cpp  fieldlines.hpp  findip.hpp  findip2.hpp  geomsearch.cpp  geomsearch.hpp  global.cpp  global.hpp  hpref_hex.hpp  hpref_prism.hpp  hpref_pyramid.hpp  (+61 more)
libsrc/occ/: CMakeLists.txt  Makefile.in  Partition_Inter2d.cxx  Partition_Inter2d.hxx  Partition_Inter3d.cxx  Partition_Inter3d.hxx  Partition_Loop.cxx  Partition_Loop.hxx  Partition_Loop2d.cxx  Partition_Loop2d.hxx  Partition_Loop3d.hxx  Partition_Spliter.cxx  Partition_Spliter.hxx  cross_section.cpp  occ_edge.cpp  occ_edge.hpp  occ_face.cpp  occ_face.hpp  occ_solid.hpp  occ_utils.cpp  occ_utils.hpp  occ_vertex.cpp  occ_vertex.hpp  occconstruction.cpp  occgenmesh.cpp  occgeom.cpp  occgeom.hpp  occmeshsurf.cpp  occmeshsurf.hpp  occpkg.cpp  python_occ.cpp  python_occ.hpp  utilities.h  (+4 more)
ng/: CMakeLists.txt  Makefile.am  Makefile.in  csgeom.tcl  demoview.cpp  demoview.hpp  dialog.tcl  drawing.tcl  drawing_togl17.tcl  encoding.hpp  fonts.hpp  gui.cpp  main.cpp  menustat.tcl  netgen.ocf  netgenpy.cpp  ng.tcl  ngappinit.cpp  ngguipy.cpp  nghelp.tcl  ngpkg.cpp  ngshell.tcl  ngtcl.cpp  ngtcl.hpp  ngtesting.tcl  ngvisual.tcl  occgeom.tcl  onetcl.cpp  onetcl.py  parallelfunc.cpp  parameters.tcl  variables.tcl
nglib/: CMakeLists.txt  Makefile.am  Makefile.in  mynglib.cpp  ng_occ.cpp  ng_stl.cpp  nglib.cpp  nglib.h  nglib_occ.cpp  nglib_occ.h  parallelfunc.cpp
python/: CMakeLists.txt  NgOCC.py  __init__.py  __main__.py  config.py  config_cli.py  config_template.py  csg.py  gengeom.py  gengeom_curve.py  geom2d.py  gui.py  jupyter.py  meshing.py  occ.py  read_gmsh.py  read_meshio.py  stl.py  version_template.py  webgui.py
rules/: CMakeLists.txt  make_all_rules.sh  makerlsfile.cpp  pyramidrules2.rls  pyramids.rls  pyramids2.rls  quadrules.rls  tetra.rls  tetrules.rls  triarules.rls
tests/: CMakeLists.txt  build.sh  build_debug.sh  build_guidelines.sh  build_mpi.sh  build_ngsolve.sh  build_nospdlog.sh  build_pip.ps1  build_pip.sh  build_pip_mac.sh  cibw_before_all_linux.sh  docker_15.10  docker_16.04  dockerfile  dockerfile_mpi  fix_auditwheel_policy.py  netgen_metadata.py  utils.py
(+154 files in other folders)
